change lang margin

--- a/jianti.html
+++ b/jianti.html
@@ -13,7 +13,7 @@
         <h1>吴炫昌</h1>
         (+82) 10 5777 1998 | developers@kaist.ac.kr | <a href="https://github.com/hyunchangoh">https://github.com/hyunchangoh</a>
         <div class="dot"> 最终修订: 17:41, Sept 27, 2020.</div>
-        <div class="float"><a href="index.html">English </a> <a href="korean.html">Korean</a></div>
+        <div class="float"><a class="lang" href="index.html">English </a> <a class="lang" href="korean.html">Korean</a></div>
     </div>
     <div id="content">
         <div>
