--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="head">
         <h1>Hyunchang Oh</h1>
         (+82) 10 5777 1998 | developers@kaist.ac.kr | https://github.com/hyunchangoh
-        <div class="float"><a href="korean.html">한국어</a><a href="jianti.html">简体中文</a></div>
+        <div class="float"><a class="lang" href="korean.html">한국어</a><a class="lang" href="jianti.html">简体中文</a></div>
         <div class="dot">last updated: 17:41, Sept 27, 2020.</div>
         
         <div class="item">Research Interests</div>
