--- a/korean.html
+++ b/korean.html
@@ -13,7 +13,7 @@
         <h1>Hyunchang Oh</h1>
         (+82) 10 5777 1998 | developers@kaist.ac.kr | <a href="https://github.com/hyunchangoh">https://github.com/hyunchangoh</a>
         <div class="dot">last updated: 17:41, Sept 27, 2020.</div>
-        <div class="float"><a href="index.html">English</a><a href="jianti.html">简体中文</a></div>
+        <div class="float"><a class="lang" href="index.html">English</a><a class="lang" href="jianti.html">简体中文</a></div>
     </div>
     <div id="content">
         <div>
