change jita to qita

--- a/jianti.html
+++ b/jianti.html
@@ -339,7 +339,7 @@
 
         </div>
         <div>
-            <div class="section">吉他技术</div>
+            <div class="section">其他技术</div>
             <div class="liner"></div>
             <div class="dot2"><span class="bold3">自然语言</span> 韩语(母语)), 英语(第一语言), 汉语(HSK5级), 德语(初级), 俄语(初级), 西语(初级) </div>
 
