update military after zadaebechi

--- a/korean.html
+++ b/korean.html
@@ -111,7 +111,7 @@
                 대한민국
                 <div class="floatsub">2021.2-2022.08</div>
             </div>
-            <div class="dot"><span class="bold">훈련병 </span></div>
+            <div class="dot"><span class="bold">제 5사단 35보병여단 전술C4I운용/정비 </span></div>
             <br>
 
             <div class="sub"><a href="https://www.ringleplus.com/">링글잉글리시에듀케이션서비스</a> </div>
