--- a/korean.html
+++ b/korean.html
@@ -389,7 +389,7 @@
         <div>
             <div class="section">유틸리티</div>
             <div class="liner"></div>
-            <div class="dot2"><span class="bold3">자연어</span> 한국어(모국어), 영어(제1언어), 중국어(HSK5급), 독일어(기초적), 러시아어(기초적), 스페인어(기초적) </div>
+            <div class="dot2"><span class="bold3">자연어</span> 한국어(모국어), 영어(TOEIC 975), 중국어(HSK6급) </div>
 
             <div class="dot2"><span class="bold3">프로그래밍 언어</span> Python, Javascript, Java, C, HTML/CSS </div>
 
