remove html/css from programming languages

--- a/korean.html
+++ b/korean.html
@@ -391,7 +391,7 @@
             <div class="liner"></div>
             <div class="dot2"><span class="bold3">자연어</span> 한국어(모국어), 영어(TOEIC 975), 중국어(HSK6급) </div>
 
-            <div class="dot2"><span class="bold3">프로그래밍 언어</span> Python, Javascript, Java, C, HTML/CSS </div>
+            <div class="dot2"><span class="bold3">프로그래밍 언어</span> Python, Javascript, Java, C </div>
 
             <div class="dot2"><span class="bold3">프레임워크</span> Flask, MongoDB, ReactJS </div>
             <br>
